# mantis

./: ENCJE.md  README.md  front.dockerfile  skaffold.yaml  strapi.dockerfile
front/: package-lock.json  package.json
infra/: README.md  mariadb-secret.yaml  mariadb.yaml  rabbitmq.yaml
mockups/: LICENSE  README.txt  app.py  setup.cfg  sqlite.db
mockups/codegen/: __main__.py  entity_gen.py  stringcase.py  usecase_gen.py
mockups/codegen/templates/: entity.tpl  flask_entry.tpl  flask_import_entry.tpl  interface_entry.tpl  interface_repo.tpl  mock_entry.tpl  rest.tpl  test_repo.tpl  test_usecase.tpl  usecase.tpl
mockups/requirements/: requirements.txt
mockups/src/entity/: current_generation_enti.py  current_usage_enti.py  energy_generation_enti.py  energy_usage_enti.py  example_sqlite_enti.py  status_enti.py
mockups/src/interface/: energy_repository_inte.py  example_repository_inte.py
mockups/src/repository/: mock_repo.py  sqlite_repo.py
mockups/src/rest/: current_generation_rest.py  current_usage_rest.py  energy_generation_rest.py  energy_usage_rest.py  example_rest.py  example_sqlite_rest.py
mockups/src/usecase/: current_generation_usec.py  current_usage_usec.py  energy_generation_usec.py  energy_usage_usec.py  example_sqlite_usec.py  example_usec.py
mockups/static/css/: main.css
mockups/templates/: index.html
mockups/tests/repository/: test_mock_repo.py
mockups/tests/usecase/: test_current_generation.py  test_current_usage.py  test_energy_generation.py  test_energy_usage.py  test_example_sqlite_usec.py  test_example_usec.py
predict/: README.md
(+112 files in other folders)
