[metadata]
name = codegenerator
description = Python clean architecture framework
license = MIT
author = Michaak
version = 0.1

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    requests
    jsonschema
    flask
    mock

[options.entry_points]
console_scripts =
    code_generator = code_generator.__main__:main

[options.packages.find]
where=src
exclude =
    tests*
    codegeneratorVenv*